@@ -49,6 +49,6 @@ ld {
     _dl_map_object; _dl_map_object_deps; _dl_out_of_memory;
     _dl_relocate_object; _dl_signal_error; _dl_start_profile; _dl_starting_up;
     _dl_unload_cache;
-    _rtld_global; _dl_tls_symaddr;
+    _rtld_global; _dl_tls_symaddr; _dl_allocate_tls; _dl_deallocate_tls;
   }
 }
